Fix Selectize Spacing in All Bootstrap Tables

--- a/acornaccounting/core/static/css/custom.css
+++ b/acornaccounting/core/static/css/custom.css
@@ -41,8 +41,8 @@ body { padding-top: 30px; }
   color: white;
 }
 
-/* Properly align Selectize inputs in tables */
-#transaction-table div.selectize-input {
+/* Properly align Selectize inputs in all tables */
+table.table div.selectize-input {
   vertical-align: middle;
 }
 /* Prevent empty Selectize account widgets from being tiny */
